apps/kiali-server/envs/gke-prod-01/httproute.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kiali
  namespace: istio-system
  annotations:
    argocd.argoproj.io/sync-options: ServerSideApply=true
spec:
  parentRefs:
  - name: shared-gateway-int
    namespace: gateway-api
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames: ["kiali.k01.devm.corp.pinpetuk.net"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kiali
      port: 20001
      kind: Service
      group: ''
      weight: 1
